# antigravity-agent-ui-mockup

./: README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.d.ts
.github/workflows/: autobuild.yml  ci.yml  release.yml  updater.yml
.storybook/: preview.ts
scripts/: bump-version.mjs
src/: App.tsx  AppUserPanel.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: app_settings.rs  config_manager.rs  constants.rs  db_monitor.rs  directories.rs  main.rs  path_utils.rs  setup.rs  state.rs
src-tauri/src/antigravity/: cleanup.rs
src-tauri/src/commands/: account_commands.rs  account_manage_commands.rs  db_monitor_commands.rs  logging_commands.rs  mod.rs  platform_commands.rs  process_commands.rs  settings_commands.rs  tray_commands.rs  window_commands.rs
src-tauri/src/language_server/: commands.rs
src-tauri/src/platform/: antigravity.rs  process.rs
src-tauri/src/system_tray/: manager.rs  mod.rs  tray.rs
src-tauri/src/utils/: log_decorator.rs  log_sanitizer.rs  mod.rs  sanitizing_layer.rs  tracing_config.rs
src-tauri/src/window/: event_handler.rs  state_manager.rs
src/commands/: AccountCommands.ts  AccountManageCommands.ts  LanguageServerCommands.ts  LoggingCommands.ts  PlatformCommands.ts  ProcessCommands.ts  SettingsCommands.ts  TrayCommands.ts
src/components/: ExportPasswordDialog.tsx  ImportPasswordDialog.tsx
src/hooks/: use-antigravity-is-running.ts  use-tray-menu.ts  use-update-checker.ts
src/modules/: db-monitoring-store.ts  use-account-addition-data.ts  use-antigravity-account.ts  (+4 more)
(+55 files in other folders)
