[package]
name = "antigravity-agent"
version = "1.5.0"
description = "Antigravity Agent - Account management tool"
authors = ["Kiki"]
edition = "2021"

[dependencies]
tauri = { version = "2.9", features = ["tray-icon", "devtools"] }
tauri-plugin-shell = "2.3.3"
tauri-plugin-dialog = "2.4.2"
tauri-plugin-fs = "2.4.4"
tauri-plugin-updater = "2.9.0"
tauri-plugin-process = "2.3.1"
tauri-plugin-http = "2.5.4"
tauri-plugin-os = "2"
tauri-plugin-opener = "2.5.2"

# Tracing 生态系统
tracing = "0.1.43"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
tracing-appender = "0.2.4"
tracing-attributes = "0.1"

base64 = "0.22.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["full"] }
dirs = "6.0"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
regex = "1.10"
sysinfo = "0.30"
prost = "0.12"
log = "0.4.28"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }
prost-build = "0.12"
protoc-bin-vendored = "3"
